<resources>
    <string name="app_name">BluetoothLeWatch</string>

    <string name="default_email">taunioned.leb@sdu.edu.cn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_reset_db">重置数据库</string>
    <string name="action_simulation_db">模拟注入数据</string>
    <string name="action_simulation_device">模拟设备历史</string>
    <string name="action_simulation_device_type">模拟设备类型</string>
    <string name="action_break_link">断开链接</string>
    <string name="action_logout">注销</string>

    <string name="nav_login_title">登录</string>
    <string name="nav_main_title">主页</string><!--主界面 名字未定-->
    <string name="nav_walk_title">健身</string>
    <string name="nav_history_title">历史</string>
    <string name="nav_watch_list_title">设备列表</string>
    <string name="nav_deveice_type_list_title">设备列表</string>
    <string name="nav_manage_title">设置</string>
    <string name="nav_share_title">分享</string>

    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="unknown_device">未知设备</string>
    <string name="unknown_device_address">未知MAC地址</string>
    <string name="ble_not_supported">err:设备不支持BLE</string>
    <string name="bluetooth_not_supported">err:设备不支持蓝牙</string>

    <string name="le_scan_active">扫描中…</string>
    <string name="device_null">未连接设备</string>

    <string name="heart_calculating">测量中</string>
    <string name="heart_nil"> </string>
    <string name="step_counting">计步中</string>
    <string name="step_nil">未连接</string>

    <string name="weight_counting_info">体重</string>
    <string name="weight_counting">测量中</string>

    <string name="mi_band_info">小米手环</string>
    <string name="wait_mi_band">佩戴好手环后轻敲手环完成连接</string>

    <string name="text_hint_login_id">用户名</string>
    <string name="text_hint_login_password">密码</string>
    <string name="button_login">登录</string>

    <string name="description_login_logo_image">应用LOGO</string>

    <string name="warning_text">N/A</string>
    <string name="nil_text"> </string>

    <string name="debug_text_update">手动上传缓存数据</string>

    <string name="table_device_type">table_设备类型</string>
    <string name="table_device_history">table_设备历史</string>
    <string name="name_mi_band">小米手环</string>
    <string name="name_ptwatch">中弘腕表</string>
    <string name="name_ptscale">中弘体脂秤</string>

    <string name="initial_mi_band">MI1S</string>
    <string name="initial_ptwatch">PTWatch</string>
    <string name="initial_ptscale">PTSCALE</string>

    <string name="initial_test_mi_band">T*MI1S</string>
    <string name="initial_test_ptwatch">T*PTWatch</string>
    <string name="initial_test_ptscale">T*PTSCALE</string>

    <string name="main_list_title_search">搜索周围设备</string>
    <string name="main_list_title_history">快速连接</string>

    <string name="main_list_gist_search">按类型搜索</string>
    <string name="main_list_gist_history">根据历史记录完成连接</string>
</resources>
