<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_walk"
            android:icon="@mipmap/directions_walk"
            android:title="@string/nav_walk_title" />
        <item android:id="@+id/nav_history"
            android:icon="@mipmap/history"
            android:title="@string/nav_history_title" />
        <item android:id="@+id/nav_watch_list"
            android:icon="@mipmap/list"
            android:title="@string/nav_watch_list_title" />
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_manage"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_manage_title"
            android:checkable="false"/>
        <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
            android:title="@string/nav_share_title"
            android:checkable="false"/>
    </group>
</menu>