<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_reset_db"
        android:title="@string/action_reset_db"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_simulation_db"
        android:title="@string/action_simulation_db"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_simulation_device"
        android:title="@string/action_simulation_device"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_simulation_device_type"
        android:title="@string/action_simulation_device_type"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <!--><item android:id="@+id/action_break_link"
        android:title="@string/action_break_link"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:checked="false"/>!-->

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
